# rapidllm

./: .gitignore  LICENSE  README.md  pyproject.toml
rapidllm/: __init__.py  agent.py  utils.py
swiftllm/: tools.py  utils.py
