[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftllm"
version = "0.1.0"
description = "A small framework for building predictable multi-tool LLM agents."
authors = [
    { name = "Patrick Tuyizere", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "litellm>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/Patk-Tuy/swiftllm"
Repository = "https://github.com/Patk-Tuy/swiftllm"

[tool.setuptools.packages.find]
where = ["."]